--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     This is my first webpage.
     I'm adding a new line.
